metadata/force-app/main/default/objects/CustomName_qEkzA__c/CustomName_qEkzA__c.object-meta.xml
<CustomObject>
    <description>Description_klQLy</description>
    <label>CustomLabel_iyPtn</label>
    <nameField>
        <label>CustomLabel_iyPtn</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_iyPtns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>