metadata/force-app/main/default/objects/CustomName_qEkzA__c/fields/CustomField_qghBg__c.field-meta.xml
<CustomField>
    <fullName>CustomField_qghBg__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldVqSuN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>